2004-09-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/main.cc (parse_argv): process --tex too.

	* ly/music-functions-init.ly (keepWithTag): add music functions
	keepWithTag and removeWithTag.

	* lily/quote-iterator.cc (Quote_iterator): init transposed_musics_.

	* lily/accidental-engraver.cc (recent_enough): interpret laziness
	= #t. This fixes no-reset accidental-style.

	* input/regression/accidental-piano.ly (Module): new file.

	* lily/lily-guile.cc (LY_DEFINE): ly_assoc_get: new function.

2004-09-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/slur-scoring.cc (score_extra_encompass): widen X extent of
	extra encompass.
	(score_extra_encompass): use Y coordinate of attachment if X
	attachment falls in extra encompass X extent.

	* buildscripts/guile-gnome.sh (SLIB_PATH): add SLIB_PATH to
	GUILE_LOAD_PATH

2004-09-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-gnome.scm: Small fixes.

	* buildscripts/guile-gnome.sh: Getting close to 2.6.0 release.

2004-09-16  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/notation.itely (Ancient flags): Removed
	documentation on adjust-if-on-staffline (this property was removed
	by Han-Wen).

	* Documentation/user/notation.itely (Ancient notation): Minor
	cleanups and fixes.  Renamed "Vaticana style contexts" ->
	"Gregorian Chant contexts".  Added section "Mensural contexts".
	Added section "Ancient articulations".

	* ly/engraver-init.ly: Added "MensuralVoice" and "MensuralStaff".

2004-09-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/guile-gnome.sh: Add missing bit.

2004-09-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* buildscripts/guile-gnome.sh (LD_LIBRARY_PATH): new script.

	* lily/slur-scoring.cc (get_y_attachment_range): set end point
	using base_attachment.

	* scm/page-layout.scm (default-page-make-stencil): whoops. Add
	page header back.

	* scm/documentation-generate.scm (top-node): move version to top
	node.

	* lily/ledger-line-spanner.cc: add ledgered-interface, with