@@ -1,5 +1,8 @@
 2004-09-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/slur-scoring.cc (score_extra_encompass): check if extra
+	objects are on boundary column. 
+
 	* lily/main.cc (parse_argv): process --tex too.
 
 	* ly/music-functions-init.ly (keepWithTag): add music functions
